# KognitiveRoboticsMikRobi

./: README.md
KognitiveRoboticsMikRobi/Launch files/: mikrobi_linefolow.launch.py
KognitiveRoboticsMikRobi/Line Follower files/: line_follower.py
KognitiveRoboticsMikRobi/track files/: model.config  track.dae  track_world.sdf
src/Week-1-8-Cognitive-robotics/turtlebot3_mogi/gazebo_models/track/: model.sdf
src/Week-1-8-Cognitive-robotics/turtlebot3_mogi/gazebo_models/track2/: model.sdf
src/Week-1-8-Cognitive-robotics/turtlebot3_mogi/gazebo_models/track2/meshes/: track2.dae
src/Week-1-8-Cognitive-robotics/turtlebot3_mogi/launch/: mikrobi_linefolow.launch.py
src/Week-1-8-Cognitive-robotics/turtlebot3_mogi/rviz/: turtlebot3_line_follower.rviz
src/Week-1-8-Cognitive-robotics/turtlebot3_mogi/worlds/: track_world.sdf
src/Week-1-8-Cognitive-robotics/turtlebot3_mogi_py/turtlebot3_mogi_py/: line_follower_cnn.py
src/line_mapper_pkg/: package.xml  setup.cfg  setup.py
src/line_mapper_pkg/line_mapper_pkg/: line_follower_cnn.py  line_mapper.py  test_marker.py
src/turtlebot3/turtlebot3_slam_toolbox/config/: slam_toolbox_mapping.yaml
