<?xml version="1.0"?>
<package format="3">
  <name>line_mapper_pkg</name>
  <version>0.0.0</version>
  <description>Line_mapper node for mikrobi</description>
  <maintainer email="traserlaci@gmail.com">trsr</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
